Optimized: Images & Icons

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -1661,7 +1661,7 @@ span.simply-word {
 /* //forms style (coming-soon) */
 /* admission form page */
 .form-w3l {
-  background: url(../images/bg9.jpg) no-repeat center;
+  background: url(../images/admin-loginbg.jpg) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
