Corrections: Lot of Pending Minor Corrections

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -287,7 +287,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.sticky-nav {
   min-height: 700px;
 }
 .banner-w3ls-1 {
-  background: url(../images/header.jpeg) no-repeat center;
+  background: url(../images/header-croppped.png) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
