Fixed: Yojnaye & PadAdhikari Team Section + Lot of minor issues

--- a/assets/front/css/developers.css
+++ b/assets/front/css/developers.css
@@ -52,7 +52,7 @@ ul {
 }
 
 .our-webcoderskull {
-  background: url("https://liip.rokka.io/www_articlebig_3/95d3e8/how-to-become-software-developer.jpg")
+  background: url("../images/dev-bg.png")
     no-repeat center top / cover;
 }
 .our-webcoderskull .cnt-block {
