Updated: Sponcership Section & Done final Testing for launch

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -841,7 +841,7 @@ h6.small-heading {
 /* inner pages */
 /* course page */
 .banner-agile-2 {
-  background: url(../images/temp-final-header.png) no-repeat center;
+  background: url(../images/newnewheader1.png) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
